# zed

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  extension.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
src/: lib.rs
