[package]
name = "schemalock-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "SchemaLock language server extension for the Zed editor"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
schemalock-zed-core = { path = "core" }

[workspace]
members = ["core"]
